# wakaama

./: CMakeLists.txt  library.json
coap/: block.c  transaction.c
core/: internals.h  liblwm2m.c  list.c  management.c  objects.c  observe.c  registration.c  uri.c
data/: json_common.c
examples/client/: CMakeLists.txt  custom_coap.c  custom_coap.h  lwm2mclient.c  lwm2mclient.h  object_access_control.c  object_connectivity_moni.c  object_connectivity_stat.c  object_device.c  object_firmware.c  object_gateway.c  object_gateway.h  object_location.c  object_mqtt_broker.c  object_mqtt_broker.h  object_security.c  object_server.c  object_test.c  object_vendor.c  object_vendor.h  object_wot_action.c  object_wot_action.h  object_wot_data_feature.c  object_wot_data_feature.h  object_wot_event.c  object_wot_event.h  object_wot_thing.c  object_wot_thing.h  wot_bootstrap_config.c  wot_bootstrap_config.h  wot_bootstrap_example.c
examples/client/common/: lwm2mclient.c  lwm2mclient.h
examples/server/: lwm2mserver.c
examples/shared/: dtlsconnection.c  dtlsconnection.h
examples/shared/tinydtls/: ccm.c  dtls.c  dtls_config.h  dtls_config_esp32.h  dtls_debug.h  dtls_prng_esp32.c  global.h
examples/shared/tinydtls/platform-specific/: dtls_prng_espidf.c
include/: dtls_config.h  liblwm2m.h
